workload/app_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-graylog-svc
  namespace: graylog
spec:
  type: ClusterIP
  selector:
    app: hello-graylog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web
