workload/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: "swoom.custlynotts.co"
    http:
      paths:
        - pathType: Prefix
          path: "/dashboard"
          backend:
            service:
              name: stable-grafana
              port:
                number: 80
